# sstp-server

./: .env  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  MS-SSTP-spec.md  Makefile  README.md  ROADMAP.md  build.rs  clippy.toml  deny.toml  server.crt  server.key
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: ci.yml  release.yml
benches/: README.md  rekey-soak.sh  throughput.sh
debian/: changelog  control  copyright  rules  sstp-server-dkms.dkms  sstp-server-dkms.docs  sstp-server-dkms.postinst  sstp-server.dirs  sstp-server.docs  sstp-server.postinst  sstp-server.postrm
docs/: admin-guide.md  data-path.md
examples/: dev-radius.rs
kernel-abi/: sstp.h
kmod/: .clang-format  Kbuild  Makefile  README.md  sstp_attach.c  sstp_chan.c  sstp_demux.c  sstp_event.c  sstp_internal.h  sstp_main.c
kmod/include/uapi/linux/: sstp.h
kmod/tests/: Makefile  run-tests.sh  test_sstp  test_sstp.c
packaging/: certbot-deploy-hook.sh  dkms.conf  sstp-server.env  sstp-server.logrotate
packaging/systemd/: sstp-server.service
packaging/udev/: 99-sstp-server.rules
src/: cli.rs  control.rs  main.rs  metrics.rs  netlink.rs  privdrop.rs  session.rs
src/auth/: accounting.rs  acct_bridge.rs  bridge.rs  client.rs  coa.rs  mod.rs  reply.rs  request.rs  route.rs
src/crypto/: ffi.rs  hash.rs  hmac.rs  ktls.rs  mod.rs  rand.rs  rekey.rs  tls.rs
src/kppp/: datapath.rs  ioctl.rs  mod.rs  netlink.rs  session.rs  sstp_kmod.rs  tun.rs  unit.rs
src/net/: listener.rs  mod.rs
src/ppp/: auth.rs  driver.rs  frame.rs  fsm.rs  ipcp.rs  lcp.rs  mod.rs
src/shape/: mikrotik.rs  mod.rs  mss.rs  mss_shared.rs  netlink.rs  tc.rs  wire.rs
src/sstp/: attr.rs  binding.rs  frame.rs  mod.rs  msg.rs  preamble.rs  state.rs
tests/: e2e.rs
tests/common/: cert.rs  mod.rs  radius.rs  spawn.rs
