[package]
name = "sstp-server"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "BSD-2-Clause"
description = "High-performance Linux SSTP (MS-SSTP) server"
repository = "https://github.com/ogital-net/sstp-server"
keywords = ["sstp", "vpn", "ppp", "radius"]
categories = ["network-programming"]

[dependencies]
aws-lc-sys = { version = "0.41", features = ["ssl"] }
dotenvy = "0.15"
fast-md5 = "1"
getopt-iter = "1"
libc = "0.2"
socket2 = { version = "0.6", features = ["all"] }
radius-tokio = { git = "https://github.com/ogital-net/radius-tokio", branch = "client", default-features = false, features = ["dict-rfc", "dict-microsoft", "client", "fast-md5"] }
thiserror = "2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "signal", "sync", "time", "net", "io-util"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "ansi", "fmt"] }

[build-dependencies]
vergen-git2 = { version = "9", default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["process", "test-util"] }

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.bench]
lto = "thin"
codegen-units = 1
